--- a/cityharvest/app/beliefs.html
+++ b/cityharvest/app/beliefs.html
@@ -21,7 +21,7 @@
     <!-- === Title === -->
     <title>City Harvest Church | Contact</title>
     <!-- === CSS === -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/get_involved.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/beliefs.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
@@ -42,9 +42,9 @@
         <div class="navbar-menu">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
+                <li class="nav-item"><a href="#home" class="nav-link active">About</a></li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
-                <li class="nav-item"><a href="#home" class="nav-link active">Get Involved</a></li>
+                <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
@@ -64,160 +64,211 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>Get Involved</h2>
-                        <p class="lead text-secondary">
-                            There is always a place for you, just ride in.
-                        </p>
+                        <h2>What We Believe</h2>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- == Get involved == -->
-        <section id="get_involved">
+        <!-- == About == -->
+        <section id="about">
             <div class="container">
+                <h1 class="about-title">Our Beliefs</h1>
                 <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/invite.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
                         <div class="card-body">
-                            <h2>Invite</h2>
+                            <h3>1. The Scripture inspired</h3>
                             <p>
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
+                                The Scriptures, both the Old and New Testaments, are verbally inspired of God and are
+                                the revelation of God to man, the infallible, authoritative rule of faith and conduct.
+                                2 Timothy 3:15-17 · 1 Thessalonians 2:13 · 2 Peter 1:21
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/serve.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h2>Serve</h2>
-                            <p>
-                                At City Harvest, there are many opportunities to serve God. Let's do it together.
-                            </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/volunteer.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
                         <div class="card-body">
-                            <h2>Volunteer</h2>
+                            <h3>2. The One True God</h3>
                             <p>
-                                There is always a place for you, just ride in.
+                                The one true God has revealed Himself as the eternally self-existent “I AM,” the Creator
+                                of heaven and earth and the Redeemer of mankind. He has further revealed Himself as
+                                embodying the principles of relationship and association as Father, Son and Holy Spirit.
+                                Deuteronomy 6:4 · 2 Corinthians 13:14 · Matthew 28:19 · Mark 12:29
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/outreach.jpg" alt=""
-                                    class="card-img-top img-fluid">
-                            </div>
-                        </div>
                         <div class="card-body">
-                            <h2>OutReach</h2>
+                            <h3>3. The Deity of The Lord Jesus Christ</h3>
                             <p>
-                                Go and make people disciples of chirst.
+                                We believe in the Virgin Birth, Sinless Life, Miraculous Ministry, Substitutionary
+                                Atoning Death, Bodily Resurrection, Triumphant Ascension and Abiding Intercession of the
+                                Lord Jesus Christ and in His personal, visible, bodily return in power and glory as the
+                                blessed hope of all believers
+                                Isaiah 7:14 · Matthew 1:23 · Hebrews 7:25-26 · 1 Peter 2:22 · Acts 2:22 · Acts 10:38 · 2
+                                Corinthians 5:21 · Hebrews 9:12 · Luke 24:39 · 1 Corinthians 15:4 · Acts 1:9 · Ephesians
+                                4:8-10 · Romans 8:34 · 1 Corinthians 15:22-24, 51-57 · 1 Thessalonians 4:13-18 ·
+                                Revelation 20:1-6
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/give.jpg" alt=""
-                                    class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h2>Giving</h2>
-                            <p>
-                                Give generously and with a cheerful heart.
-                            </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/prayer.jpg" alt=""
-                                    class="card-img-top img-fluid">
-                            </div>
-                        </div>
                         <div class="card-body">
-                            <h2>Prayer Meetings</h2>
+                            <h3>4. The Fall of Man</h3>
                             <p>
-                                Get together every Friday to seek God and His power.
+                                We believe in the fall of man, who was created pure and upright, but fell by voluntary
+                                transgression.
+                                Genesis 1:26-31 · Genesis 3:1-7 · Romans 5:12-21
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>5. The Salvation of Man</h3>
+                            <p>
+                                We believe in salvation through faith in Christ, who, according to the Scriptures, died
+                                for our sins, was buried and was raised from the dead on the third day, and that through
+                                His Blood we have Redemption
+                                Titus 2:11 · Titus 3:5-7 · Romans 10:8-15 · 1 Corinthians 15:3-4
+
+                                This experience is also known as the new birth, and is an instantaneous and complete
+                                operation of the Holy Spirit upon initial faith in the Lord Jesus Christ.
+                                John 3:5-6 · James 1:18 · 1 Peter 1:23 · 1 John 5:1
+                            </p>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/bible.jpg" alt=""
-                                    class="card-img-top img-fluid">
-                            </div>
-                        </div>
                         <div class="card-body">
-                            <h2>Bible Study</h2>
+                            <h3>6. The Ordinances of The Church</h3>
                             <p>
-                                Get together every Wednesday to learn the word of God.
+                                We believe that all who have truly repented and believed in Christ as Lord and Savior
+                                are commanded to be baptized by immersion in water.
+                                Matthew 28:19 · Acts 10:47-48 · Acts 2:38-39
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>7. Baptism in The Holy Spirit</h3>
+                            <p>
+                                We believe in the baptism in the Holy Spirit as an inducement of the believer with power
+                                for service, the essential, biblical evidence of which is the speaking with other
+                                tongues as the Spirit gives utterance.
+                                Acts 1:4-5, 8 · Acts 2:4 · Acts 10:44-46 · Acts 11:14-16 · Acts 19:6
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>8. The initial physical evidence of the baptism in The Holy Spirit</h3>
+                            <p>
+                                We believe in the operation of the gifts of the Holy Spirit and the gifts of Christ in
+                                the Church today.
+                                1 Corinthians 12:4-11 · 1 Corinthians 12:28 · Ephesians 4:7-16
+                            </p>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/get-involved/groups.jpg" alt=""
-                                    class="card-img-top img-fluid">
-                            </div>
-                        </div>
                         <div class="card-body">
-                            <h2>WELL.COM GROUPS</h2>
+                            <h3>9. Sanctification</h3>
                             <p>
-                                Fellowship with other members weekly in small groups.
+                                We believe in holiness of life and conduct in obedience to the command of God.
+                                Hebrews 12:14 · 1 Peter 1:14-16 · 1 Thessalonians 5:23 · 1 John 2:6
                             </p>
-                            <div class="card-btns">
-                                <a href="#" class="btn event">Learn More</a>
-                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>10. The Church and its mission</h3>
+                            <p>
+                                We believe the church has a mission to seek and save all who are lost in sin.
+                                Acts 1:8 · Matthew 28:19-20 · Mark 16:15-16
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>11. The ministry</h3>
+                            <p>
+                                We believe a divinely called and biblically ordained leadership ministry serves the
+                                church.
+                                Mark 16:15-20 · John 4:23-24 · Ephesians 4:11-16 · Psalms 112:9
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>12. Divine healing</h3>
+                            <p>
+                                We believe that deliverance from sickness, by Divine Healing is provided in the
+                                Atonement
+                                Isaiah 53:4-5 · Matthew 8:16-17 · James 5:13-16
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>13. The blessed hope</h3>
+                            <p>
+                                We believe in the bodily resurrection of all men, the everlasting conscious bliss of all
+                                who truly believe in our Lord Jesus Christ and the everlasting conscious punishment of
+                                all whose names are not written in the Book of Life.
+                                Daniel 12:2-3 · John 5:28-29 · Matthew 25:46 · 1 Corinthians 15:22-24 · 1 Thessalonians
+                                1:9 · Revelation 20:10-15
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>14. The millenial reign of Christ</h3>
+                            <p>
+                                We believe the second coming of Christ includes the rapture of the saints, which is our
+                                blessed hope, followed by the visible return of Christ with His saints to reign on earth
+                                for one thousand years.
+                                Zechariah 14:5 · Matthew 24:27 · Matthew 24:30 · Revelation 1:7 · Revelation 19:11-14 ·
+                                Revelation 20:1-6
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>15. The final judgement</h3>
+                            <p>
+                                We believe there will be a final judgment in which the wicked dead will be raised and
+                                judged according to their works.
+                                Matthew 25:46 · Mark 9:43-48 · Revelation 19:20 · Revelation 20:11-15 · Revelation 21:8
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h3>16. The new heavens and the new earth</h3>
+                            <p>
+                                “We, according to His promise, look for new heavens and a new earth wherein dwelleth
+                                righteousness.”
+                                2 Peter 3:13 · Revelation 21 · Revelation 2
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
     </main>
 
     <!-- === Footer === -->
