--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -75,7 +75,7 @@
             <div class="container">
                 <h1 class="about-title">About</h1>
                 <div class="even-columns">
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-body">
                             <p>
                                 Never leave your friends behind, let them experience the goodness of God here at City
