--- a/cityharvest/app/get_involved.html
+++ b/cityharvest/app/get_involved.html
@@ -41,7 +41,41 @@
         <div class="navbar-menu">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
+                <li class="nav-item dropdown">
+                    <a href="#home" class="nav-link change-Color">About
+                        <ul class="dropdown-menu">
+                            <li class="nav-item">
+                                <a href="about.html" class="nav-link">Who We Are</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="leaders.html" class="nav-link">Leadership</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="beliefs.html" class="nav-link">What We Believe</a>
+                            </li>
+                            <li class="nav-item dropdown-location">
+                                <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-location">
+                                    <li class="nav-item">
+                                        <a href="contact.html" class="nav-link">Bahari Beach</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="ch_kigamboni.html" class="nav-link">Kigamboni</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="ch_dodoma.html" class="nav-link">Dodoma</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="ch_mwanza.html" class="nav-link">Mwanza</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="ch_india.html" class="nav-link">India</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
                 <li class="nav-item"><a href="#home" class="nav-link active">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
@@ -114,7 +148,8 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/volunteer.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/get-involved/volunteer.jpg" alt=""
+                                    class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
@@ -147,8 +182,7 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/give.jpg" alt=""
-                                    class="card-img-top img-fluid">
+                                <img src="../assets/img/get-involved/give.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
@@ -166,8 +200,7 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/prayer.jpg" alt=""
-                                    class="card-img-top img-fluid">
+                                <img src="../assets/img/get-involved/prayer.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
@@ -183,8 +216,7 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/bible.jpg" alt=""
-                                    class="card-img-top img-fluid">
+                                <img src="../assets/img/get-involved/bible.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
@@ -200,8 +232,7 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="../assets/img/get-involved/groups.jpg" alt=""
-                                    class="card-img-top img-fluid">
+                                <img src="../assets/img/get-involved/groups.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
@@ -231,8 +262,8 @@
                     <ul class="nav-menu">
                         <li class="nav-item"><a href="" class="nav-link">Give</a></li>
                         <li class="nav-item"><a href="" class="nav-link">I'm New</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Events</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
+                        <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
+                        <li class="nav-item"><a href="get_involved.html" class="nav-link">Get Involved</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
