--- a/cityharvest/app/sermons.html
+++ b/cityharvest/app/sermons.html
@@ -41,7 +41,41 @@
         <div class="navbar-menu">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
+                <li class="nav-item dropdown">
+                    <a href="#home" class="nav-link change-Color">About
+                        <ul class="dropdown-menu">
+                            <li class="nav-item">
+                                <a href="about.html" class="nav-link">Who We Are</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="leaders.html" class="nav-link">Leadership</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="beliefs.html" class="nav-link">What We Believe</a>
+                            </li>
+                            <li class="nav-item dropdown-location">
+                                <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-location">
+                                    <li class="nav-item">
+                                        <a href="contact.html" class="nav-link">Bahari Beach</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="ch_kigamboni.html" class="nav-link">Kigamboni</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="ch_dodoma.html" class="nav-link">Dodoma</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="ch_mwanza.html" class="nav-link">Mwanza</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="ch_india.html" class="nav-link">India</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="#home" class="nav-link active">Sermons</a></li>
                 <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
@@ -112,8 +146,8 @@
                     <ul class="nav-menu">
                         <li class="nav-item"><a href="" class="nav-link">Give</a></li>
                         <li class="nav-item"><a href="" class="nav-link">I'm New</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Events</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
+                        <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
+                        <li class="nav-item"><a href="get_involved.html" class="nav-link">Get Involved</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
