--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -538,8 +538,8 @@
                     <ul class="nav-menu">
                         <li class="nav-item"><a href="" class="nav-link">Give</a></li>
                         <li class="nav-item"><a href="" class="nav-link">I'm New</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Events</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
+                        <li class="nav-item"><a href="app/events.html" class="nav-link">Events</a></li>
+                        <li class="nav-item"><a href="app/get_involved.html" class="nav-link">Get Involved</a></li>
                         <li class="nav-item"><a href="app/contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
