--- a/cityharvest/app/leaders.html
+++ b/cityharvest/app/leaders.html
@@ -100,7 +100,7 @@
                     <div class="hero-txt">
                         <h2>Leadership</h2>
                         <p class="lead text-secondary">
-                            Get to know the crew of our chuch leaders.
+                            Get to know the crew of our church leaders.
                         </p>
                     </div>
                 </div>
