Changes on about page

--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -107,7 +107,7 @@
         <!-- == About == -->
         <section id="about">
             <div class="container">
-                <h1 class="about-title">About</h1>
+                <h1 class="about-title">About Us</h1>
                 <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-body">
