Updates on about, leaders and beliefs pages

--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -112,12 +112,11 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-body">
                             <p>
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
+                                We are an Assemblies of God church located in Tanzania. We are a Holy Spirit-filled
+                                church and a place where people gather to
+                                worship Jesus Christ. <a href="beliefs.html" class="beliefs">Our beliefs</a> have been made stronger under 16 foundations of faith
+                                of Assemblies of God church. We love God, we love people and we live to transform the
+                                lives of many into godliness.
                             </p>
                         </div>
                     </div>
@@ -127,12 +126,9 @@
                         <div class="card-body">
                             <h2>Mission</h2>
                             <p>
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
-                                Never leave your friends behind, let them experience the goodness of God here at City
-                                Harvest.
+                                Go therefore and make disciples of all nations, baptizing them in the name of the Father
+                                and of the Son and of the Holy Spirit, teaching them to observe all that I have
+                                commanded you; and lo, I am with you always, to the close of the age. Matthew 28:19-20
                             </p>
                         </div>
                     </div>
