--- a/cityharvest/app/leaders.html
+++ b/cityharvest/app/leaders.html
@@ -110,7 +110,7 @@
         <!-- == Pastors == -->
         <section id="pastors">
             <div class="container">
-                <h1 class="pastors-title">Leader Pastors</h1>
+                <h1 class="pastors-title">Lead Pastors</h1>
                 <div class="row even-columns">
                     <div class="pastors-img" data-aos="zoom-in-up" data-aos-delay="100">
                         <img src="../assets/img/pastors/lead-pastors.png" alt="">
