Updates on leaders and index pages

--- a/cityharvest/app/contact.html
+++ b/cityharvest/app/contact.html
@@ -97,7 +97,7 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>Contact Us</h2>
+                        <h2>Contact</h2>
                         <div class="social">
                             <a href="https://www.youtube.com/@CityHarvestChurchDar" target="_blank"
                                 rel="noopener noreferrer">
