--- a/cityharvest/app/leaders.html
+++ b/cityharvest/app/leaders.html
@@ -142,7 +142,7 @@
         <!-- == Other Pastors == -->
         <section id="other-pastors">
             <div class="container">
-                <h1 class="other-pastors-title">Associate Pastors</h1>
+                <h1 class="other-pastors-title">Assistant Pastors</h1>
                 <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
@@ -153,10 +153,25 @@
                         <div class="card-body">
                             <h2>Rev. Franklin Minja</h2>
                             <p>
-                                Local Church Pastor
+                                Youth & Local Church Pastor
                             </p>
                         </div>
                     </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/pastors/pst-musa.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Latson Musa</h2>
+                            <p>
+                                Missions, Music and CMF Pastor
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
@@ -167,21 +182,6 @@
                             <h2>Ayoub Samson</h2>
                             <p>
                                 Campus Pastor
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="even-columns">
-                    <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-img">
-                            <div class="card-inner">
-                                <img src="../assets/img/pastors/pst-musa.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h2>Latson Musa</h2>
-                            <p>
-                                Missions Pastor
                             </p>
                         </div>
                     </div>
