--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -98,7 +98,10 @@
                 <div class="row">
                     <div class="hero-txt">
                         <h2>For young professionals and college students who are commited to excellence</h2>
-                        <a href="#" class="btn btn-outline-primary">Join Us</a>
+                        <div class="flex-btns">
+                            <a href="#" class="btn-new">I'm New</a>
+                            <a href="#" class="btn-join">Join Us</a>
+                        </div>
                     </div>
                 </div>
             </div>
