react_native_jobs app has been added

--- a/cityharvest/app/events.html
+++ b/cityharvest/app/events.html
@@ -78,7 +78,21 @@
                 </li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
                 <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
+                <li class="nav-item dropdown-resources">
+                    <a href="#" class="nav-link change-Color">Resources
+                        <ul class="dropdown-menu-resources">
+                            <li class="nav-item">
+                                <a href="articles.html" class="nav-link">Articles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="reports.html" class="nav-link">Reports</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="#home" class="nav-link active">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
