--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -79,7 +79,21 @@
                 </li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
                 <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color ">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
+                <li class="nav-item dropdown-resources">
+                    <a href="#" class="nav-link change-Color">Resources
+                        <ul class="dropdown-menu-resources">
+                            <li class="nav-item">
+                                <a href="articles.html" class="nav-link">Articles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="reports.html" class="nav-link">Reports</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
@@ -114,7 +128,8 @@
                             <p>
                                 We are an Assemblies of God church located in Tanzania. We are a Holy Spirit-filled
                                 church and a place where people gather to
-                                worship Jesus Christ. <a href="beliefs.html" class="beliefs">Our beliefs</a> have been made stronger under 16 foundations of faith
+                                worship Jesus Christ. <a href="beliefs.html" class="beliefs">Our beliefs</a> have been
+                                made stronger under 16 foundations of faith
                                 of Assemblies of God church. We love God, we love people and we live to transform the
                                 lives of many into godliness.
                             </p>
