--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -78,7 +78,21 @@
                 </li>
                 <li class="nav-item"><a href="app/sermons.html" class="nav-link change-Color">Sermons</a></li>
                 <li class="nav-item"><a href="app/get_involved.html" class="nav-link change-Color">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Resources</a></li>
+                <li class="nav-item dropdown-resources">
+                    <a href="#" class="nav-link change-Color">Resources
+                        <ul class="dropdown-menu-resources">
+                            <li class="nav-item">
+                                <a href="app/articles.html" class="nav-link">Articles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="app/reports.html" class="nav-link">Reports</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="app/written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="app/events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="app/contact.html" class="nav-link change-Color">Contact</a></li>
